# VulkanEngine

./: CMakeLists.txt  LICENSE  README.md  gen_win64.bat
.github/workflows/: codeql-analysis.yml
build_win64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  VulkanEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_win64/src/: VulkanEngine.vcxproj  VulkanEngine.vcxproj.filters  cmake_install.cmake
build_win64/src/VulkanEngine.dir/Debug/: CodeAnalysisResultManifest.txt  VulkanEngine.exe.recipe  engine.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  main.nativecodeanalysis.xml  render.nativecodeanalysis.sarif  render.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  viewport.nativecodeanalysis.sarif  viewport.nativecodeanalysis.xml
build_win64/src/VulkanEngine.dir/Debug/VulkanEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VulkanEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_win64/src/VulkanEngine.dir/Release/: VulkanEngine.exe.recipe
build_win64/src/VulkanEngine.dir/Release/VulkanEngine.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  VulkanEngine.lastbuildstate  link.command.1.tlog  (+2 more)
build_win64/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_win64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
src/: CMakeLists.txt  dispatch.h  engine.cpp  engine.h  main.cpp  render.cpp  render.h  vertex.h  viewport.cpp  viewport.h
src/shaders/: compile shaders.bat  shader.vert
(+3 files in other folders)
